[project]
name = "ypa_pubsub"
version = "0.1.0"
description = "YPA's library for Google Cloud Pub/Sub"
authors = [
    { name = "Technochezh", email = "technochezh@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10"
]

[project.urls]
Homepage = "https://github.com/ypa-group/lib-pubsub"
Repository = "https://github.com/ypa-group/lib-pubsub.git"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"